# VkGalaxy

./: .gitignore  CMakeLists.txt  Makefile  README.md  shader_compile.bat  shader_compile.sh
assets/shaders/: fragment.frag  galaxy_particle.comp  galaxy_particle.frag  galaxy_particle.vert  grid.frag  grid.vert  particle.frag  particle_generate.comp  vertex.vert
src/: draw.cpp  draw.hpp  game.cpp  game.hpp  game_draw.cpp  game_draw.hpp  globals.hpp  main.cpp  quickdata.h  quickobj.h  render.cpp  render.hpp
src/libs/: quickmath.hpp  render.cpp  render.hpp
src/libs/vkh/: quickdata.h  vkh.c  vkh.h
